# pytRIBS

./: README.md  makemesh.py  pyproject.toml  requirements.txt
.github/workflows/: install_and_test.yml
pytRIBS/land/: land.py
pytRIBS/mesh/: mesh.py
pytRIBS/met/: met.py
pytRIBS/model/: run_docker.py
pytRIBS/results/: read.py  waterbalance.py
pytRIBS/shared/: aux.py  infile_mixin.py  inout.py  shared_mixin.py
pytRIBS/soil/: soil.py
